<resources>
    <string name="app_name">Joopz</string>
    <string name="button_login">Login</string>
    <string name="button_forgot_password">Forgot password?</string>
    <string name="button_create_account">Create account</string>
    <string name="email">Email</string>
    <string name="hint_password">Password</string>
    <string name="minimum_password">Password is at least 6 characters.</string>
    <string name="auth_failed">Authentication failed, check email and/or password or create account.</string>
    <string name="dashboard_option1">For\nLoops</string>
    <string name="dashboard_option2">While\nLoops</string>
    <string name="dashboard_option3">Nested\nLoops</string>
    <string name="dashboard_option4">2-D Array\nTraversals</string>
    <string name="add">Add Challenge</string>
    <string name="solved">solved</string>
    <string name="header">Challenge #</string>
    <string name="solve_button">Solve Challenge </string>
    <string name="incomplete_loop"></string>
    <string name="start_value">Start value: </string>
    <string name="condition_operator">Condition operator: </string>
    <string name="condition_value">Condition value: </string>
    <string name="value_change">Value change: </string>
    <string name="message_expected">Expected Output</string>
    <string name="expected_output"></string>
    <string name="message_actual">Actual Output</string>
    <string name="actual_output"></string>
    <string name="button_execute">RUN CODE</string>
    <string name="result"></string>
    <string name="get_problem">GET PROBLEM</string>
    <string name="instructions"></string>

</resources>
