<!--<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/backgroundColor">

    <Button
        android:id="@+id/get_problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_problem"/>

</LinearLayout>-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/lightGray"
    android:gravity="center">

    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/for_card"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <!--<ImageView-->
                    <!--android:layout_width="64dp"-->
                    <!--android:layout_height="64dp"-->
                    <!--android:background="@drawable/cerclebackgroundpurple"-->
                    <!--android:src="@drawable/ic_attach_money_black_24dp"-->
                    <!--android:padding="10dp"/>-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="10pt"
                    android:textColor="@color/joopzBlue"
                    android:layout_marginTop="10dp"
                    android:text="@string/dashboard_option1"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:id="@+id/for_solved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/solved"
                    android:padding="5dp"
                    android:textColor="@color/darkGray"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/while_card"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <!--<ImageView-->
                    <!--android:layout_width="64dp"-->
                    <!--android:layout_height="64dp"-->
                    <!--android:background="@drawable/cerclebackgroundpink"-->
                    <!--android:src="@drawable/ic_lightbulb_outline_black_24dp"-->
                    <!--android:padding="10dp"/>-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="10pt"
                    android:textColor="@color/joopzBlue"
                    android:layout_marginTop="10dp"
                    android:text="@string/dashboard_option2"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/solved"
                    android:padding="5dp"
                    android:textColor="@color/darkGray"/>


            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/nested_card"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <!--<ImageView-->
                    <!--android:layout_width="64dp"-->
                    <!--android:layout_height="64dp"-->
                    <!--android:background="@drawable/cerclebackgroundgreen"-->
                    <!--android:src="@drawable/ic_control_point_black_24dp"-->
                    <!--android:padding="10dp"/>-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="10pt"
                    android:textColor="@color/joopzBlue"
                    android:layout_marginTop="10dp"
                    android:text="@string/dashboard_option3"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/solved"
                    android:padding="5dp"
                    android:textColor="@color/darkGray"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/twoD_card"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <!--<ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/cerclebackgroundyello"
                    android:padding="10dp"
                    android:src="@drawable/ic_attach_file_black_24dp" />-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="10pt"
                    android:textColor="@color/joopzBlue"
                    android:layout_marginTop="10dp"
                    android:text="@string/dashboard_option4"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/solved"
                    android:padding="5dp"
                    android:textColor="@color/darkGray"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:background="@color/joopzBlue"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="10pt"
        android:textColor="@color/backgroundColor"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:textAllCaps="false"
        android:text="@string/add"/>

</LinearLayout>
